@@ -23,15 +23,15 @@ CONSOLE MESSAGE: line 1: SyntaxError: Parse error
 CONSOLE MESSAGE: line 1: SyntaxError: Parse error
 CONSOLE MESSAGE: line 1: SyntaxError: Parse error
 Content-Type: text/plain
-resources/tests1.dat: 25, 26, 29, 30, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52, 53, 54, 57, 59, 78, 79, 80, 81, 82, 83, 84, 87, 88, 90, 91, 92, 96, 98, 101, 104, 106, 109, 113
+resources/tests1.dat: 25, 29, 30, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52, 53, 54, 57, 59, 78, 79, 80, 81, 82, 87, 90, 91, 92, 96, 98, 101, 104, 106, 109, 113
 
-resources/tests2.dat: 2, 6, 7, 8, 9, 10, 11, 12, 16, 17, 18, 19, 20, 21, 22, 23, 29, 30, 32, 33, 36, 40, 42, 44, 45, 53, 54, 57
+resources/tests2.dat: 6, 7, 8, 9, 10, 11, 12, 16, 17, 18, 19, 20, 21, 22, 23, 29, 30, 32, 33, 36, 40, 42, 44, 45, 53, 54, 57
 
-resources/tests3.dat: 5, 6, 7, 8, 14, 15, 16, 17, 18, 19
+resources/tests3.dat: 5, 6, 7, 8, 16, 17, 18, 19
 
 resources/tests4.dat: 3, 5, 6, 7
 
-resources/tests5.dat: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16
+resources/tests5.dat: 2, 6, 7, 8, 9, 13, 14, 16
 
 resources/tests6.dat: 1, 3, 4, 6, 8, 9, 10, 11, 12, 27, 29, 30, 31, 37, 44, 45, 46, 47, 48, 49, 50, 51
 
@@ -51,7 +51,7 @@ resources/tests14.dat: PASS
 
 resources/tests15.dat: 3, 4, 5, 6, 7, 11, 12, 13
 
-resources/tests16.dat: 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 25, 27, 28, 42, 44, 45, 56, 57, 58, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 97, 98, 99, 100, 101, 102, 103, 104, 106, 107, 108, 109, 110, 111, 119, 121, 122, 136, 138, 139, 148, 149, 150, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186
+resources/tests16.dat: 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 25, 27, 28, 42, 44, 45, 56, 57, 58, 82, 84, 85, 86, 87, 88, 90, 94, 97, 98, 99, 100, 101, 102, 103, 104, 106, 107, 108, 109, 110, 111, 119, 121, 122, 136, 138, 139, 148, 149, 150, 174, 176, 177, 178, 179, 180, 182, 186
 
 resources/webkit01.dat: PASS
 
